ASPECT Update: --init database;